feat(deployement): Final fixes

--- a/apps/embed/test.html
+++ b/apps/embed/test.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-    <script src="http://localhost:3001/widget.js" data-organization-id="org_32SDA2Vmot1nCn7Df0oJpWtw3CQ"></script>
+    <script src="https://supportly-widget-nu.vercel.app/widget.js"
+        data-organization-id="org_32SDA2Vmot1nCn7Df0oJpWtw3CQ"></script>
 </body>
 
 </html>
